name:                wedge
version:             0.1.0
synopsis:            The Wedge language
-- description:         
homepage:            https://github.com/wedge-lang/wedge
category:            Language

author:              Chris Haster
maintainer:          chaster@utexas.edu
-- copyright:           
-- license:             GPL-2
-- license-file:        LICENSE

build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:

source-repository head
  type:                git
  location:            git://github.com/wedge-lang/wedge.git

executable wedge
  main-is:             Main.hs
  other-modules:       Emit, Lex, Parse, Rule, Type
  hs-source-dirs:      src

  ghc-options:         -W
  default-extensions:  LambdaCase, RankNTypes

  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9

